[project]
name = "DDPM-venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "datasets>=4.8.5",
    "gputil>=1.4.0",
    "jupyter>=1.1.1",
    "lmdb>=1.7.3",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "prettytable>=3.17.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.20",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.21.0",
    "umap-learn>=0.5.11",
]

[dependency-groups]
dev = []

[tool.uv.sources]
torch = [
    { index = "pytorch-nightly-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-nightly-cu128", marker = "sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-nightly-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv]
prerelease = "allow"
